feat: Implement Goal System and fix local dev issues

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Track your favorite movies, TV shows, anime, and books",
   "main": "index.html",
   "scripts": {
+    "start": "live-server",
     "build": "bubblewrap build",
     "update": "bubblewrap update",
     "validate": "bubblewrap validate"
