--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,29 @@ app-release-signed.apk.idsig
 app-release-unsigned-aligned.apk
 
 # Mac
-.DS_Store 
+.DS_Store
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Netlify
+.netlify/
+netlify.toml
+
+# Build artifacts
+/build
+/dist
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
